---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/structs.arc

---
fun foo(a: { c: i32, b: i32 }, b: { b: i32, c: i32 }): { a: { c: i32, b: i32 }, xyz: i32, d: { b: i32, c: i32 } } {
    val r = { a: a, xyz: 4711, d: b };
    r
}
fun test() {
    val x = foo({ c: 1, b: 5 }, { b: 4, c: 2 });
    
}

